--- a/index.html
+++ b/index.html
@@ -3,50 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>PPT Summary Maker</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        body {
-            background-color: #E5E5EE;
-        }
 
-        /* Frosted Glass Effect for Navbar */
-        .navbar-blur {
-            background: rgba(255, 255, 255, 0.1); /* Slight transparency */
-            backdrop-filter: blur(15px); /* The actual blur effect */
-            -webkit-backdrop-filter: blur(15px); /* For Safari */
-            position: fixed; /* Keeps navbar at top */
-            width: 100%;
-            top: 0;
-            left: 0;
-            z-index: 1000; /* Makes sure it’s above content */
-            padding: 10px 0;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        }
-        ::selection {
-            color: white;
-            background: #6C63FF;
-        }
-        a{
-            text-decoration: none;
-        }
-        a:link {
-        color: black;  /* Unvisited link color */
-        }
+    <link rel="stylesheet" href="style.css">
 
-        a:visited {
-        color: black; /* Visited link color */
-        }
+    
 
-    </style>
 </head>
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-sm navbar-blur">
+    <nav class="navbar navbar-expand-sm navbar-blur interp">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">PPT Summary Maker</a>
+            <a class="navbar-brand urbanisth" href="index.html" style="color: #1E2A38;">PPT Summary Maker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -73,67 +47,69 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 d-flex justify-content-start align-items-center min-vh-100">
-                <span><h1 style="font-size: 3rem;">Upload, Summarize,<br>Present – It’s That Easy!</h1>
-                <p>No more spending hours summarizing documents—our AI quickly analyzes and converts your content into presentation-ready slides.</p>
+                <span><h1 style="font-size: 3.5rem;" class="urbanisth">Upload, Summarize, Present – <span class="gradient">It’s That Easy!</span></h1>
+                <br>
+                <p class="interp" style="font-size: 1.2rem;">No more spending hours summarizing documents—our AI quickly analyzes and converts your content into presentation-ready slides.</p><br>
                 <div class="btn btn-outline-primary">
                     Upload File
                 </div>
             </span>
             </div>
             <div class="col-lg-6 d-flex justify-content-center align-items-center min-vh-100">
-                <img src="https://lh3.googleusercontent.com/pw/AP1GczPV3gmfajZp8IjyDJuIxGw6C6vcE1AoxQyJNfJitDjjO64HNStbRv5fwysHNBOkbAuuvjo4ibbNIhDLOcyRDn3MGQStjnh51Nn06x9x9rqA4WSVSEvOQqsayKf_53M7MrDt_yP3GFvCxeV6ep6D_lA9=w1203-h978-s-no-gm" style="width: 100%; height: auto; border-radius: 10%;">
+                <img src="https://raw.githubusercontent.com/Parth-Bodavala/hackathon/main/Img/HomePage.png" style="width: 100%; height: auto; border-radius: 10%;">
             </div>
         </div>
     </div>
-    <div class="container">
-        <hr>
-    </div>
-    <div class="container text-center my-5 py-3">
-        <h2 class="fw-bold">Stay Updated with Our Latest Insights</h2>
-        <p class="lead">Navigate Easily</p>
+<div class="foot my-5 container">
+    <hr>
+    <br>
+    <div class="container text-center my-5">
+        <h2 class="fw-bold urbanistp" style="font-size: 1.7rem;">Stay Updated with Our Latest Insights</h2>
+        <p class="lead interp mt-4" style="font-size: 1.1rem;">Navigate Easily</p>
     </div>    
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <ul style="list-style-type: none;">
+            <div class="row mb-5 pt-5 ">
+                <div class="col-lg-3 col-spc">
+                    <ul class="interh"  style="list-style-type: none;">
                         <li><b>Company</b></li>
                         <br>
-                        <li><a href="about.html">About Us</a></li>
-                        <li>Contact Us</li>
+                        <li class="mb-2 lih"><a href="about.html">About Us</a></li>
+                        <li class="mb-2 lih"><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3">
-                    <ul style="list-style-type: none;">
+                <div class="col-lg-3 col-spc">
+                    <ul class="interh" style="list-style-type: none;">
                         <li><b>Services</b></li>
                         <br>
-                        <li>AI Summary</li>
-                        <li>PPT Generation</li>
-                        <li>Multi Format<br>Support</li>
+                         <li class="mb-2 lih"><a href="sevices.html">AI Summary</a></li>
+                         <li class="mb-2 lih"><a href="sevices.html">PPT Generation</a></li>
+                         <li class="mb-2 lih"><a href="sevices.html">Multi Format<br>Support</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3">
-                    <ul style="list-style-type: none;">
+                <div class="col-lg-3 col-spc">
+                    <ul class="interh" style="list-style-type: none;">
                         <li><b>Legal</b></li>
                         <br>
-                        <li>Privacy Policy</li>
-                        <li>Terms of service</li>
+                         <li class="mb-2 lih"><a href="privacy.html">Privacy Policy</a></li>
+                         <li class="mb-2 lih"><a href="terms.html">Terms of service</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3">
-                    <ul style="list-style-type: none;">
+                <div class="col-lg-3 col-spc">
+                    <ul class="interh" style="list-style-type: none;">
                         <li><b>Social Media</b></li>
                         <br>
-                        <li><a href="https://www.x.com/" target="_blank">Facebook</a></li>
-                        <li><a href="https://www.instagarm.com/" target="_blank">Instagram</a></li>
-                        <li><a href="https://www.instagarm.com/" target="_blank">X</a></li>
+                         <li class="mb-2 lih"><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+                         <li class="mb-2 lih"><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+                         <li class="mb-2 lih"><a href="https://www.x.com/" target="_blank">X</a></li>
                     </ul>
                 </div>
             </div>
             <br>
             <hr>
+            <br>
             <div class="row">
-            <div class="col-sm-6">
-                <p>© 2025 <a href="index.html">PPTXGen.</a> All rights reserved.</p>
+            <div class="col-sm-6 cp">
+                <p class="interp">© 2025 <a href="index.html">PPTSummaryMaker.</a> All rights reserved.</p>
             </div>
             <div class="col-sm-6 text-end">
             <span>
@@ -150,6 +126,6 @@
             </div>
             </div>
         </div>
-        <br>
+</div>
 </body>
 </html>
