--- a/about.html
+++ b/about.html
@@ -41,8 +41,10 @@
     </nav>
     <div class="container content">
         <div class="row">
-            <div class="col-lg-5">
-                <img src="https://raw.githubusercontent.com/Parth-Bodavala/hackathon/main/Img/AboutUS.png" width="100%" height="auto" style="border-radius: 15%;">
+            <!-- Id float -->
+            <div class="col-lg-5" id="float">
+                <img src="https://raw.githubusercontent.com/Parth-Bodavala/hackathon/main/Img/AboutUS.png" width="100%" height="auto" style="border-radius: 15%;  position: relative;
+    animation: slideRtoL 1s ease-in-out;">
             </div>
             <div class="col-lg-7" style="padding: 4em;">
                 <h1 style="font-size: 350%;" class="urbanisth"><span class="gradient">Your AI </span>Companion for Smarter Summaries & Presentations </h1>
