--- a/contact.html
+++ b/contact.html
@@ -87,9 +87,9 @@
                 </div>
 
 
-
-                <div class="row mt-4 text-center">
-                    <div class="col-md-4 col-12 mb-3 mx-auto">
+                <!-- CLASS hover-effect & popup -->
+                <div class="row mt-4 text-center popup hover-effect">
+                    <div class="col-md-4 col-12 mb-3 mx-auto hover-effect">
                         <a href="https://www.instagram.com/">
 
                             <div class="border p-4 rounded-5 bdr shadow p-3 mb-5 rounded">
@@ -103,8 +103,8 @@
                             </div>
                         </a>
                     </div>
-
-                    <div class="col-md-4 col-12 mb-3 mx-auto">
+                    <!-- CLASS hover-effect -->
+                    <div class="col-md-4 col-12 mb-3 mx-auto hover-effect">
                         <a href="https://www.x.com/">
 
                             <div class="border p-4 rounded-5 bdr shadow p-3 mb-5 rounded">
@@ -118,8 +118,8 @@
                             </div>
                         </a>
                     </div>
-
-                    <div class="col-md-4 col-12 mb-3 mx-auto">
+                    <!-- CLASS hover-effect -->
+                    <div class="col-md-4 col-12 mb-3 mx-auto hover-effect">
                         <a href="https://www.facebook.com/">
 
                             <div class="border p-4 rounded-5 bdr shadow p-3 mb-5 rounded">
