--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    
+    <script src="script.js"></script>
 
 </head>
 <body>
@@ -50,13 +50,14 @@
                 <span><h1 style="font-size: 3.5rem;" class="urbanisth">Upload, Summarize, Present – <span class="gradient">It’s That Easy!</span></h1>
                 <br>
                 <p class="interp" style="font-size: 1.2rem;">No more spending hours summarizing documents—our AI quickly analyzes and converts your content into presentation-ready slides.</p><br>
-                <div class="btn btn-outline-primary">
+                <!-- Button Id  -->
+                <div class="btn btn-outline-primary" id="btn" style="margin-right: 1vw; padding: 0.8em 1.5em; font-weight: 700;">
                     Upload File
                 </div>
             </span>
             </div>
             <div class="col-lg-6 d-flex justify-content-center align-items-center min-vh-100">
-                <img src="https://raw.githubusercontent.com/Parth-Bodavala/hackathon/main/Img/HomePage.png" style="width: 100%; height: auto; border-radius: 10%;">
+                <img src="https://raw.githubusercontent.com/Parth-Bodavala/hackathon/main/Img/HomePage.png"  class="floating-image" style="width: 100%; height: auto; border-radius: 10%;">
             </div>
         </div>
     </div>
