--- a/sevices.html
+++ b/sevices.html
@@ -10,11 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
-    <style>
-        .content{
-            margin-top: 8vh;
-        }
-    </style>
+
 </head>
 <body>
 
@@ -74,7 +70,8 @@
             <div style="margin: 8vh 0vw;">
                 <span class="d-flex text-center align-items-center justify-content-center">
                     <a href="index.html">
-                        <div style="margin-right: 1vw; padding: 0.8em 1.5em; background-color: rgba(0, 0, 0, 0.05); color: #213040; font-weight: 700;" class="rounded-pill interp try">Try it now!</div>
+                        <!-- Id try -->
+                        <div style="margin-right: 1vw; padding: 0.8em 1.5em; background-color: rgba(0, 0, 0, 0.05); color: #213040; font-weight: 700;" class="rounded-pill interp try" id="try">Try it now!</div>
                     </a>
 
                     <a href="https://raw.githubusercontent.com/Parth-Bodavala/hackathon/main/DOCS/User%20Manual.pdf">
